    Players & Console can now use color codes (including stuff like &a or [[GREEN]]) in party or admin chat
    Added new permission node 'mcmmo.chat.colors' which allows players to use color codes, negate to disallow this
    The style and look of admin/party chat is now determined by locale file instead of options in config.yml
    Improved messages players recieve when they toggle on or off admin or party chat
    All locale files have had [[]] color codes replaced by & color codes, you can still use [[GOLD]] and stuff if you want
    You can now add "-s" at the end of mmoedit, addlevels, or addxp to silence the command. Which will prevent the target of the command from being informed that the command was executed.
    Added new locale entry 'Commands.Usage.3.XP'
    Added new locale entry 'Chat.Identity.Console'
    Added new locale entry 'Chat.Style.Admin'
    Added new locale entry 'Chat.Style.Party'
    Added new locale entry 'Chat.Channel.On'
    Added new locale entry 'Chat.Channel.Off'
    Fixed an ArrayIndexOutOfBounds exception when using /skillreset
    (API) ChatAPI::getPartyChatManager() has been removed
    (API) ChatAPI::sendPartyChat has been removed (similar functionality can be found in the new ChatManager class)
    (API) ChatAPI::sendAdminChat has been removed (similar functionality can be found in the new ChatManager class)
    (API) Fake events in mcMMO now implement 'FakeEvent' (thanks TheBusyBiscuit)
    (API) Updated Adventure Library to 4.1.1
    (API) McMMOChatEvent has been reworked, plugins dependent on this event should review this class and make appropriate changes

    NOTES:
    The mcMMO chat events now make use of adventure library by Kyori, you can override the message payload with a TextComponent, which allows for some fancy stuff potentially.
    I'll put in some of my own fancy stuff for party and admin chat in a future update.

Version 2.1.149
    Added a new config file 'persistent_data.yml'