@@ -21,7 +21,7 @@ public class SamePartyPredicate<T extends CommandSender> implements Predicate<T>
     public boolean test(T t) {
         //Include the console in the audience
         if(t instanceof ConsoleCommandSender) {
-            return true;
+            return false; //Party audiences are special, we exclude console from them to avoid double messaging since we send a more verbose version to consoles
         } else {
             if(t instanceof Player) {
                 Player player = (Player) t;
